# bazel_toolchain_atmega

./: .bazeliskrc  .bazelrc  .gitignore  MODULE.bazel  README.md
code/: BUILD.Unity  BUILD.bazel  MODULE.bazel
code/hdr/: math.h  math.hpp
code/src/: main.c  main.cpp  math.c  math.cpp
code/test/: test_math.c  test_math.cpp
mplab_xc8_compiler/: BUILD.bazel  MODULE.bazel
mplab_xc8_compiler/v3.00/: Uninstall MPLAB XC8 C Compiler.desktop  manifest
mplab_xc8_compiler/v3.00/avr/avr/lib/ldscripts/: avr1.x  avr1.xbn  avr1.xn  avr1.xr  avr1.xu  avr2.x  avr2.xbn  avr2.xn  avr2.xr  avr2.xu  avr25.x  avr25.xbn  avr25.xn  avr25.xr  avr25.xu  avr3.x  avr3.xbn  avr3.xn  avr3.xr  avr3.xu  avr31.x  avr31.xbn  avr31.xn  avr31.xr  avr31.xu  avr35.x  avr35.xbn  avr35.xn  avr35.xr  avr35.xu  avr4.x  avr4.xbn  avr4.xn  avr4.xr  avr4.xu  avr5.x  avr5.xbn  avr5.xn  avr5.xr  avr5.xu  (+50 more)
mplab_xc8_compiler/v3.00/avr/doc/: license.txt
mplab_xc8_compiler/v3.00/avr/doc/binutils/as.html/: AS-Index.html  AVR-Opcodes.html  AVR-Options.html  AVR-Pseudo-Instructions.html  AVR_002dChars.html  AVR_002dDependent.html  AVR_002dModifiers.html  AVR_002dRegs.html  Absolute-Literals-Directive.html  Blackfin-Directives.html  Blackfin-Options.html  Blackfin-Syntax.html  Blackfin_002dDependent.html  Bug-Criteria.html  Bug-Reporting.html  CR16-Operand-Qualifiers.html  CR16_002dChars.html  CR16_002dDependent.html  CRIS_002dChars.html  CRIS_002dDependent.html  CRIS_002dExpand.html  CRIS_002dOpts.html  CRIS_002dPic.html  CRIS_002dPseudos.html  CRIS_002dRegs.html  CRIS_002dSymbols.html  Compare_002dand_002dbranch_002di960.html  D10V_002dAddressing.html  (+316 more)
mplab_xc8_compiler/v3.00/avr/info/: as.info  bfd.info  binutils.info  ld.info
mplab_xc8_compiler/v3.00/avr/lib64/: libcc1.la  libcc1.so.0
mplab_xc8_compiler/v3.00/avr/man/man1/: avr-addr2line.1  avr-ar.1  avr-as.1  avr-ld.1
mplab_xc8_compiler/v3.00/avr/share/info/: annotate.info  cpp.info  cppinternals.info  gcc.info  gccinstall.info  gccint.info  gdb.info  stabs.info
mplab_xc8_compiler/v3.00/docs/: Hexmate_Readme.htm  MPLAB_XC8_C_Compiler_License.rtf  OTHER-SOFTWARE-LICENSES.html  Readme_XC8_for_AVR.htm  Readme_XC8_for_PIC.htm  XC8-v3.00-part-support-release-notes.html  XC8MasterIndex.htm  avr_chipinfo.html  license.txt  pic18_chipinfo.html  pic_chipinfo.html  readme.html
mplab_xc8_compiler/v3.00/docs/Readme_XC8_for_AVR.html.dat/: Readme_XC8_for_AVR.css
mplab_xc8_compiler/v3.00/docs/Readme_XC8_for_PIC.html.dat/: Readme_XC8_for_PIC.css
mplab_xc8_compiler/v3.00/docs/chips/: 10f200.html  10f202.html  10f204.html  10f206.html  10f220.html  10f222.html  10f320.html  10f322.html  10lf320.html  10lf322.html  12c508.html  12c508a.html  12c509.html  12c509a.html  12c671.html  12c672.html  12ce518.html  12ce519.html  12ce673.html  12ce674.html  12cr509a.html  12f1501.html  12f1571.html  12f1572.html  12f1612.html  12f1822.html  12f1840.html  12f508.html  12f509.html  12f510.html  12f519.html  12f529t39a.html  12f529t48a.html  12f609.html  12f615.html  12f617.html  12f629.html  12f635.html  12f675.html  12f683.html  (+1379 more)
mplab_xc8_compiler/v3.00/etc/: xclm.conf
mplab_xc8_compiler/v3.00/pic/dat/cfgdata/: 10f200.cfgdata  10f202.cfgdata  10f204.cfgdata  10f206.cfgdata  10f220.cfgdata  10f222.cfgdata  10f320.cfgdata  10f322.cfgdata  10lf320.cfgdata  10lf322.cfgdata  12c508.cfgdata  12c508a.cfgdata  12c509.cfgdata  12c509a.cfgdata  12c671.cfgdata  12c672.cfgdata  12ce518.cfgdata  12ce519.cfgdata  12ce673.cfgdata  12ce674.cfgdata  12cr509a.cfgdata  12f1501.cfgdata  12f1571.cfgdata  12f1572.cfgdata  12f1612.cfgdata  12f1822.cfgdata  12f1840.cfgdata  12f508.cfgdata  12f509.cfgdata  12f510.cfgdata  12f519.cfgdata  12f529t39a.cfgdata  12f529t48a.cfgdata  12f609.cfgdata  12f615.cfgdata  12f617.cfgdata  12f629.cfgdata  12f635.cfgdata  12f675.cfgdata  12f683.cfgdata  (+1051 more)
mplab_xc8_compiler/v3.00/pic/dat/ini/: 10f200.ini  10f202.ini  10f204.ini  10f206.ini  10f220.ini  10f222.ini  10f320.ini  10f322.ini  10lf320.ini  10lf322.ini  12c508.ini  12c508a.ini  12c509.ini  12c509a.ini  12c509af.ini  12c509ag.ini  12c671.ini  12c672.ini  12ce518.ini  12ce519.ini  12ce673.ini  12ce674.ini  12cr509a.ini  12f1501.ini  12f1571.ini  12f1572.ini  12f1612.ini  12f1822.ini  12f1840.ini  12f508.ini  12f509.ini  12f510.ini  12f519.ini  12f529t39a.ini  12f529t48a.ini  12f609.ini  12f615.ini  12f617.ini  12f629.ini  12f635.ini  (+1061 more)
mplab_xc8_compiler/v3.00/pic/etc/: predefined.conf
mplab_xc8_compiler/v3.00/pic/include/: __at.h  builtins.h  htc.h  language_support.h  pic18_chip_select.h  pic18_chip_select.inc  pic_as_chip_select.inc  pic_chip_select.h  xc.h
mplab_xc8_compiler/v3.00/pic/include/c99/: ctype.h  inttypes.h  math.h  musl_xc8.h  stdint.h  stdio.h  stdlib.h  syscall_arch.h
mplab_xc8_compiler/v3.00/pic/include/proc/: 10f200.cgen.inc  10f202.cgen.inc  10f204.cgen.inc  10f206.cgen.inc  10f220.cgen.inc  10f222.cgen.inc  10f320.cgen.inc  10f322.cgen.inc  10lf320.cgen.inc  10lf322.cgen.inc  12c508.cgen.inc  12c508a.cgen.inc  12c509.cgen.inc  12c509a.cgen.inc  12c671.cgen.inc  12c672.cgen.inc  12ce518.cgen.inc  12ce519.cgen.inc  12ce673.cgen.inc  12ce674.cgen.inc  12cr509a.cgen.inc  12f1501.cgen.inc  12f1571.cgen.inc  12f1572.cgen.inc  12f1612.cgen.inc  12f1822.cgen.inc  12f1840.cgen.inc  12f508.cgen.inc  12f509.cgen.inc  12f510.cgen.inc  12f519.cgen.inc  12f529t39a.cgen.inc  12f529t48a.cgen.inc  12f609.cgen.inc  12f615.cgen.inc  12f617.cgen.inc  12f629.cgen.inc  12f635.cgen.inc  12f675.cgen.inc  12f683.cgen.inc  (+3217 more)
toolchains/: BUILD.avr-compiler  BUILD.bazel  BUILD.xc8-compiler  MODULE.bazel  bare_metal_atmega_328_toolchain_config_info.bzl  linux_x86_64_toolchain_config_info.bzl
toolchains/tools/: hex.bzl  paths_helper.bzl
toolchains/wrappers/: avr-ar-wrapper.sh  avr-cpp-wrapper.sh  avr-gcc-wrapper.sh  avr-ld-wrapper.sh  avr-nm-wrapper.sh  avr-objcopy-wrapper.sh  avr-objdump-wrapper.sh  avr-strip-wrapper.sh  xc8-ar-wrapper.sh  xc8-avr-gcc-wrapper.sh  xc8-cc-wrapper.sh  xc8-cpp-wrapper.sh  xc8-ld-wrapper.sh  xc8-nm-wrapper.sh  xc8-objcopy-wrapper.sh  xc8-objdump-wrapper.sh  xc8-strip-wrapper.sh
(+1021 files in other folders)
