module(name = "monorepo", version = "0.1")

local_path_override(module_name = "code_repo", path = "code/")
bazel_dep(name = "code_repo", version = "0.1")

local_path_override(module_name = "toolchains", path = "toolchains/")
bazel_dep(name = "toolchains", version = "0.1")

register_toolchains("@toolchains//:cc_linux_x86_64_toolchain")
register_toolchains("@toolchains//:bare_metal_atmega_328_cc_toolchain")