

cc_binary(
    name = "main",
    srcs = [
        "src/main.c"
    ],
    deps = [
        ":math"
    ]
)

cc_library(
    name = "math",
    srcs = [
        "src/math.c",
    ],
    hdrs = [
        "hdr/math.h"
    ],
)

cc_test(
    name = "test_math",
    size = "small",
    srcs = [
        "test/test_math.c"
    ],
    deps = [
        ":math",
        "@unity//:unity"
    ]
)