module(name = "code_repo", version = "0.1")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "unity",
    url = "https://github.com/ThrowTheSwitch/Unity/archive/refs/tags/v2.6.1.zip",
    # sha256 = "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
    build_file = "//:BUILD.Unity",
)
