package(default_visibility = ["//visibility:public"])

filegroup(
    name = "xc8_compiler",
    srcs = [
        "v3.00/bin/xc8-cc",
        "v3.00/bin/xc8-clangd"
    ],
)
filegroup(name = "ar", srcs = ["v3.00/bin/xc8-ar"])
filegroup(name = "objdump", srcs = ["v3.00/bin/avr-objdump"])
filegroup(name = "objcopy", srcs = ["v3.00/bin/avr-objcopy"])
filegroup(name = "ccov", srcs = ["v3.00/bin/xc-ccov"])
filegroup(name = "lm", srcs = ["v3.00/bin/xclm"])
filegroup(name = "ld", srcs = ["v3.00/avr/bin/avr-ld"])
filegroup(name = "cpp", srcs = ["v3.00/avr/bin/avr-cpp"])
filegroup(name = "gcov", srcs = ["v3.00/avr/bin/avr-gcov"])
filegroup(name = "strip", srcs = ["v3.00/avr/bin/avr-strip"])
filegroup(name = "nm", srcs = ["v3.00/avr/bin/avr-nm"])
filegroup(name = "avr-gcc", srcs = ["v3.00/avr/bin/avr-gcc"])


filegroup(
    name = "compiler_data",
    srcs = glob(["**/*"])
)


filegroup(
    name = "builtin_include",
    srcs = glob(
        [
        "v3.00/avr/avr/include/avr/**/*",
        "v3.00/avr/avr/include/**/*",
        "v3.00/dfp/xc8/avr/include/**/*",
        ]
    )
)