load("//:linux_x86_64_toolchain_config_info.bzl", "linux_x86_64_toolchain_config_info")

constraint_value(
    name = "bare_metal",
    constraint_setting = "@platforms//os"
)

constraint_value(
    name = "atmega-328",
    constraint_setting = "@platforms//cpu"
)

platform(
    name = "bare_metal_atmega_328",
    constraint_values = [
        ":bare_metal",
        ":atmega-328"
    ]
)

platform(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64"
    ]
)

linux_x86_64_toolchain_config_info(name = "linux_x86_64_toolchain_config_info")


filegroup(name = "empty")
cc_toolchain(
    name = "linux_x86_64_toolchain",
    toolchain_identifier = "linux_x86_64_toolchain",
    toolchain_config = "linux_x86_64_toolchain_config_info",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
)


toolchain(
    name = "cc_linux_x86_64_toolchain",
    toolchain = "linux_x86_64_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64"
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64"
    ]
)

# ATmega328 toolchain
load("//:bare_metal_atmega_328_toolchain_config_info.bzl", "bare_metal_atmega_328_toolchain_config_info")

bare_metal_atmega_328_toolchain_config_info(
    name = "bare_metal_atmega_328_toolchain_config_info",
    include_directories = [
        "@xc8-compiler//:builtin_include"
    ]
)

filegroup(
    name = "wrappers",
    srcs = glob(["wrappers/*.sh"])
)


filegroup(
    name = "all_files",
    srcs = [
        "@xc8-compiler//:avr-gcc",
        "@xc8-compiler//:ar",
        "@xc8-compiler//:ccov",
        "@xc8-compiler//:lm",
        "@xc8-compiler//:objcopy",
        "@xc8-compiler//:objdump",
        "@xc8-compiler//:gcov",
        "@xc8-compiler//:nm",
        "@xc8-compiler//:strip",
        "@xc8-compiler//:ld",
        "@xc8-compiler//:cpp",
        "@xc8-compiler//:compiler_data"
        ":wrappers",
    ]
)

filegroup(
    name = "compiler_files",
    srcs = [
        "@xc8-compiler//:avr-gcc",
        ":wrappers",
        "@xc8-compiler//:compiler_data"
    ]
)

filegroup(
    name = "ar_files",
    srcs = [
        "@xc8-compiler//:ar",
        ":wrappers",
        "@xc8-compiler//:compiler_data"
    ]
)

filegroup(
    name = "linker_files",
    srcs = [
        "@xc8-compiler//:ld",
        ":wrappers",
        "@xc8-compiler//:avr-gcc",
        "@xc8-compiler//:compiler_data"
    ]
)

filegroup(
    name = "objcopy_files",
    srcs = [
        "@xc8-compiler//:objcopy",
        ":wrappers",
        "@xc8-compiler//:compiler_data"
    ]
)

filegroup(
    name = "strip_files",
    srcs = [
        "@xc8-compiler//:strip",
        ":wrappers",
        "@xc8-compiler//:compiler_data"
    ]
)

filegroup(
    name = "gcov_files",
    srcs = [
        "@xc8-compiler//:gcov",
        ":wrappers",
        "@xc8-compiler//:compiler_data"
    ]
)


cc_toolchain(
    name = "bare_metal_atmega_328_toolchain",
    toolchain_identifier = "bare_metal_atmega_328_toolchain",
    toolchain_config = ":bare_metal_atmega_328_toolchain_config_info",
    all_files = ":all_files",
    compiler_files = ":compiler_files",
    dwp_files = ":empty",
    linker_files = ":linker_files",
    objcopy_files = ":objcopy_files",
    strip_files = ":strip_files",
    coverage_files = "gcov_files",
    ar_files = ":ar_files"
)

toolchain(
    name = "bare_metal_atmega_328_cc_toolchain",
    toolchain = "bare_metal_atmega_328_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64"
    ],
    target_compatible_with = [
        ":atmega-328",
        ":bare_metal"
    ]
)
