load("//:linux_x86_64_toolchain_config_info.bzl", "linux_x86_64_toolchain_config_info")

constraint_value(
    name = "bare_metal",
    constraint_setting = "@platforms//os"
)

constraint_value(
    name = "atmega-328",
    constraint_setting = "@platforms//cpu"
)

platform(
    name = "bare_metal_atmega_328",
    constraint_values = [
        ":bare_metal",
        ":atmega-328"
    ]
)

platform(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64"
    ]
)

linux_x86_64_toolchain_config_info(name = "linux_x86_64_toolchain_config_info")


filegroup(name = "empty")
cc_toolchain(
    name = "linux_x86_64_toolchain",
    toolchain_identifier = "linux_x86_64_toolchain",
    toolchain_config = "linux_x86_64_toolchain_config_info",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
)


toolchain(
    name = "cc_linux_x86_64_toolchain",
    toolchain = "linux_x86_64_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64"
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64"
    ]
)

# ATmega328 toolchain
load("//:bare_metal_atmega_328_toolchain_config_info.bzl", "bare_metal_atmega_328_toolchain_config_info")

bare_metal_atmega_328_toolchain_config_info(
    name = "bare_metal_atmega_328_toolchain_config_info",
    include_directories = [
        "@avr-compiler//:builtin_include"
    ]
)

filegroup(
    name = "wrappers",
    srcs = glob(["wrappers/*.sh"])
)


filegroup(
    name = "all_files",
    srcs = [
        "@avr-compiler//:avr-gcc",
        "@avr-compiler//:ar",
        "@avr-compiler//:ccov",
        "@avr-compiler//:objcopy",
        "@avr-compiler//:objdump",
        "@avr-compiler//:gcov",
        "@avr-compiler//:nm",
        "@avr-compiler//:strip",
        "@avr-compiler//:ld",
        "@avr-compiler//:cpp",
        "@avr-compiler//:compiler_data",
        ":wrappers",
    ]
)

filegroup(
    name = "compiler_files",
    srcs = [
        "@avr-compiler//:avr-gcc",
        ":wrappers",
        "@avr-compiler//:compiler_data"
    ]
)

filegroup(
    name = "ar_files",
    srcs = [
        "@avr-compiler//:ar",
        ":wrappers",
        "@avr-compiler//:compiler_data"
    ]
)

filegroup(
    name = "linker_files",
    srcs = [
        "@avr-compiler//:ld",
        ":wrappers",
        "@avr-compiler//:avr-gcc",
        "@avr-compiler//:compiler_data"
    ]
)

filegroup(
    name = "objcopy_files",
    srcs = [
        "@avr-compiler//:objcopy",
        ":wrappers",
        "@avr-compiler//:compiler_data"
    ]
)

filegroup(
    name = "strip_files",
    srcs = [
        "@avr-compiler//:strip",
        ":wrappers",
        "@avr-compiler//:compiler_data"
    ]
)

filegroup(
    name = "gcov_files",
    srcs = [
        "@avr-compiler//:gcov",
        ":wrappers",
        "@avr-compiler//:compiler_data"
    ]
)


cc_toolchain(
    name = "bare_metal_atmega_328_toolchain",
    toolchain_identifier = "bare_metal_atmega_328_toolchain",
    toolchain_config = ":bare_metal_atmega_328_toolchain_config_info",
    all_files = ":all_files",
    compiler_files = ":compiler_files",
    dwp_files = ":empty",
    linker_files = ":linker_files",
    objcopy_files = ":objcopy_files",
    strip_files = ":strip_files",
    coverage_files = "gcov_files",
    ar_files = ":ar_files"
)

toolchain(
    name = "bare_metal_atmega_328_cc_toolchain",
    toolchain = "bare_metal_atmega_328_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64"
    ],
    target_compatible_with = [
        ":atmega-328",
        ":bare_metal"
    ]
)
