module(name = "toolchains", version = "0.1")

bazel_dep(name = "platforms", version = "1.0.0")

# local_path_override(module_name = "mplab_xc8_compiler", path = "../mplab_xc8_compiler/")
bazel_dep(name = "mplab_xc8_compiler", version = "0.1")

register_toolchains("//:cc_linux_x86_64_toolchain")
register_toolchains("//:bare_metal_atmega_328_cc_toolchain")